--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,8 @@
 }
 
 /* shared styles  start*/
+
+/* display property start  */
 .flex {
   display: flex;
 }
@@ -24,6 +26,10 @@
   display: grid;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .items-center {
   align-items: center;
 }
@@ -37,48 +43,121 @@
 .max-width {
   max-width: 1216px;
 }
+
+/* display property start  */
+
+/* margin and padding start  */
 .mx-auto {
   margin: 0 auto;
 }
-.btn-bg {
-  background-color: rgb(230, 83, 60);
+
+.mt-96 {
+  margin-top: 6rem;
 }
-.font-white {
-  color: #ffffff;
+
+.mt-16 {
+  margin-top: 4rem;
 }
+/* margin and padding end */
+
+/* colors info start  */
+.text-heading-color {
+  color: #1e293b;
+}
+
+.text-sub-heading-color {
+  color: #475569;
+}
+/* colors info end */
+
 .text-info {
   font-weight: 400;
   font-size: 1rem;
   color: rgba(255, 255, 255, 0.5);
 }
-.mt-96 {
-  margin-top: 6.125rem;
-}
-.mt-14 {
-  margin-top: 0.875rem;
-}
+
 .text-center {
   text-align: center;
 }
 .cursor-pointer {
   cursor: pointer;
 }
-.font-18 {
+
+/* text size start  */
+.text-xs {
+  font-size: 0.75rem;
+}
+.text-sm {
+  font-size: 0.875rem;
+}
+.text-base {
+  font-size: 1rem;
+}
+.text-lg {
   font-size: 1.125rem;
 }
-.font-600 {
+.text-xl {
+  font-size: 1.25rem;
+}
+.text-2xl {
+  font-size: 1.5rem;
+}
+.text-3xl {
+  font-size: 1.875rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+}
+
+/* text size end  */
+
+/* font weight start  */
+.font-normal {
+  font-weight: 400;
+}
+.font-medium {
+  font-weight: 500;
+}
+.font-semiBold {
   font-weight: 600;
 }
+.font-bold {
+  font-weight: 700;
+}
+.font-extraBold {
+  font-weight: 800;
+}
+
+/* font weight end  */
 .text-none {
   text-decoration: none;
 }
 .list-none {
   list-style: none;
 }
+
+.section-title h1 {
+  margin: 1.5rem 0;
+}
+
+.section-title h5 {
+  padding: 0.375rem 0.75rem;
+  background-color: #eef2ff;
+  border-radius: 77.125rem;
+  color: #4f46e5;
+}
+.section-title p {
+  line-height: 160%;
+  max-width: 800px;
+}
 /* shared styles  end*/
 
-
 /* individual classes start  */
+
+/* sponsor classes  */
 .spoonser-container {
   gap: 1.25rem;
   margin-top: 3.125rem;
@@ -92,4 +171,57 @@
   height: 1rem;
 }
 
+/* feature classes  */
+.feature-container {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.feature-card {
+}
+.feature-card h3 {
+  margin-top: 1.25rem;
+  margin-bottom: 0.5rem;
+}
+
+.feature-card img {
+  width: 80px;
+  height: 80px;
+}
 /* individual classes end  */
+
+/* media query start  */
+/* for small device  */
+@media screen and (max-width: 576px) {
+  * {
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+  .section-title h1 {
+    font-size: 1.25rem;
+  }
+  section-title p {
+    max-width: 343px;
+    font-size: 1.125rem;
+  }
+  .feature-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+/* for medium device  */
+@media screen and (min-width: 577px) and (max-width: 768px) {
+  * {
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+  .section-title h1 {
+    font-size: 1.5rem;
+  }
+  section-title p {
+    max-width: 343px;
+    font-size: 1.125rem;
+  }
+  .feature-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+/* media query end*/
