--- a/styles/style.css
+++ b/styles/style.css
@@ -81,6 +81,10 @@
 .text-sub-heading-color {
   color: #475569;
 }
+
+.star-color {
+  color: #f59e0b;
+}
 /* colors info end */
 
 .text-info {
@@ -212,7 +216,7 @@
   height: 80px;
 }
 
-.statistics-container {
+.container {
   background-color: #f8fafc;
 }
 
@@ -251,6 +255,40 @@
 .target-audience-content-card p {
   margin-top: 0.75rem;
 }
+
+.outer-reviews-container {
+  gap: 2rem;
+}
+
+.reviews-container {
+  gap: 2rem;
+}
+
+.reviews-card {
+  padding: 1.5rem;
+  border: 1px solid #e2e8f0;
+  border-radius: 1.5rem;
+}
+
+.reviews-card p {
+  margin: 1.5rem 0;
+}
+
+.review-author {
+  gap: 0.75rem;
+}
+.review-author h5 {
+  line-height: 1.375rem;
+}
+.review-author p {
+  margin: 0;
+  line-height: 160%;
+}
+
+.review-author img {
+  width: 48px;
+  height: 48px;
+}
 /* individual classes end  */
 
 /* media query start  */
@@ -288,6 +326,13 @@
   .target-audience-content img {
     width: 343px;
   }
+  .outer-reviews-container {
+    flex-direction: column;
+  }
+  .review-author img {
+    width: 40px;
+    height: 40px;
+  }
 }
 /* for medium device  */
 @media screen and (min-width: 577px) and (max-width: 768px) {
@@ -310,6 +355,9 @@
   }
   .target-audience-content img {
     width: 100%;
+  }
+  .outer-reviews-container {
+    flex-direction: column;
   }
 }
 /* media query end*/
